repackage http client as  tern library dependency